--- a/package.json
+++ b/package.json
@@ -17,6 +17,12 @@
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.13.0"
   },
+
+
+ "engines": {
+    "node": "20.x"
+  },
+
   "devDependencies": {
     "@eslint/js": "^9.39.1",
     "@types/react": "^19.2.5",
