--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/material": "^7.3.8",
     "axios": "^1.13.4",
     "framer-motion": "^12.29.2",
     "lucide-react": "^0.563.0",
@@ -17,12 +20,9 @@
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.13.0"
   },
-
-
- "engines": {
+  "engines": {
     "node": "20.x"
   },
-
   "devDependencies": {
     "@eslint/js": "^9.39.1",
     "@types/react": "^19.2.5",
